k8s/06-worker.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: worker
          image: ghcr.io/pbanda1/devopsproject-worker:fae7c06d110d9921151fc7b8af22a705e5bc6bdb
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
