k8s/05-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api-sa
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: api
          image: ghcr.io/pbanda1/devopsproject-api:fae7c06d110d9921151fc7b8af22a705e5bc6bdb
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ticketing
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
